Findbug fixes.